# pizzaPartyOrder

./: .gitignore  README.md  docker-compose.yml  stack.env
app/: Dockerfile  app.py  config.py  db.py  encoder.py  pyproject.toml  routes.py
app/models/: order.py
app/services/: auth.py  manager.py  order_service.py  orders.py
app/static/css/: styles.css
app/static/js/: manager.js  script.js
app/templates/: index.html  login.html  manage.html
app/utils/: helpers.py
